fix(message): overflow on ie11

--- a/packages/oui-message/_mixins.less
+++ b/packages/oui-message/_mixins.less
@@ -39,6 +39,7 @@
     font-weight: @font-weight;
 
     &__body {
+      display: inline-block;
       margin: 0;
     }
 
